<resources>
    <string name="app_name">SJSUQuizApplication</string>
    <string name="title_activity_login_signup">LoginSignupActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Question Number: %1$d</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email ID</string>
    <string name="username">SJSU ID</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="error_incorrect_email">Incorrect Email Id Format</string>
    <string name="error_weak_password">Password must be longer than 6 digits</string>
    <string name="title_activity_professor_home">ProfessorHomeActivity</string>
    <string name="title_class">My Class</string>
    <string name="title_dashboard">Analytics Dashboard</string>
    <string name="title_quiz">Quizzes</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_create_quiz">CreateQuiz</string>
    <string name="sure">Are you sure?</string>
    <string name="quit_quiz">Do you really want to quit this quiz? Your progress will not be saved.</string>
    <string name="quit">Quit</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="attempt_all">You did not attempt all the questions. Do you wish to continue ?</string>
    <string name="submit_ask">Do you want to submit?</string>
    <string name="name">Name</string>
    <string name="login_activity">Login</string>
    <string name="login_txt">Welcome to Quiz application.\nYou can access available quizzes here\nPlease login with your\nSJSU Email ID</string>
    <string name="account">Account</string>
    <string name="no_quizzes">No Quizzes available at this time. Please check back later</string>
    <string name="no_questions">No Questions available. Please check back later</string>
    <string name="score">Score</string>
    <string name="submitted">You have already taken this Quiz. Your Score in this Quiz is :</string>
    <string name="take_again">Do you wish to take this Quiz again ?</string>
    <string name="yes">YES</string>
    <string name="submitted_success">Your responses have been submitted successfully. Your result will be available soon. Please check back later for your score.</string>
    <string name="ok">OK</string>
    <string name="your_score">You have scored :</string>
    <string name="in_this_quiz">in this quiz.</string>
    <string name="scores">Scores</string>
    <string name="my_class">My Class</string>
    <string name="professor">Professor Name</string>
    <string name="student">Student</string>
</resources>
