<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/account"
        android:tint="@color/colorAccent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:paddingTop="20dp"
        android:text="@string/name"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:textColor="@color/primaryLight" />

    <TextView
        android:id="@+id/name"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:paddingTop="10dp"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:paddingTop="20dp"
        android:text="@string/email"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:textColor="@color/primaryLight" />

    <TextView
        android:id="@+id/email"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:textColor="@color/colorPrimary" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/sign_out"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@android:color/white" />

</LinearLayout>